# rc433_rpi

./: .gitignore  CMakeLists.txt  README.md  build_all_git_sources.sh  csv_from_wave.py  get_all_git_sources.sh  install_recommended_packages.sh  magnitude_from_iq-wave.py  rx_wav_from_gpio.py  rx_wav_from_rtlsdr.sh  tx_csv.py  tx_csv_pigpio.c
